force-app/main/default/objects/Patient_Admission__c/fields/Available_Times_am_pm__c.field-meta.xml
<CustomField>
    <fullName>Available_Times_am_pm__c</fullName>
    <label>Available Times (am, pm)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>