force-app/main/default/objects/Patient_Admission__c/fields/Credible_address1__c.field-meta.xml
<CustomField>
    <fullName>Credible_address1__c</fullName>
    <label>Street</label>
    <type>TextArea</type>
</CustomField>