force-app/main/default/objects/Patient_Admission__c/fields/Credible_Agrees_to_staff_w_Crim_Hx__c.field-meta.xml
<CustomField>
    <fullName>Credible_Agrees_to_staff_w_Crim_Hx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agrees to staff w/Crim Hx</label>
    <type>Checkbox</type>
</CustomField>