force-app/main/default/objects/Patient_Admission__c/fields/Credible_Available_Days_Su_Sa__c.field-meta.xml
<CustomField>
    <fullName>Credible_Available_Days_Su_Sa__c</fullName>
    <label>Available Days (Su - Sa)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>