force-app/main/default/objects/Patient_Admission__c/fields/Credible_City__c.field-meta.xml
<CustomField>
    <fullName>Credible_City__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>