force-app/main/default/objects/Patient_Admission__c/fields/Credible_County__c.field-meta.xml
<CustomField>
    <fullName>Credible_County__c</fullName>
    <label>County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>