force-app/main/default/objects/Patient_Admission__c/fields/Credible_CPS_Preference__c.field-meta.xml
<CustomField>
    <fullName>Credible_CPS_Preference__c</fullName>
    <label>CPS Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>