force-app/main/default/objects/Patient_Admission__c/fields/Credible_DOB__c.field-meta.xml
<CustomField>
    <fullName>Credible_DOB__c</fullName>
    <label>DOB</label>
    <type>Date</type>
</CustomField>