force-app/main/default/objects/Patient_Admission__c/fields/Credible_Email__c.field-meta.xml
<CustomField>
    <fullName>Credible_Email__c</fullName>
    <label>Email</label>
    <length>80</length>
    <type>Text</type>
</CustomField>