force-app/main/default/objects/Patient_Admission__c/fields/Credible_Living_Situation__c.field-meta.xml
<CustomField>
    <fullName>Credible_Living_Situation__c</fullName>
    <label>Living Situation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>