force-app/main/default/objects/Patient_Admission__c/fields/Credible_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Credible_Mobile_Phone__c</fullName>
    <label>Mobile Phone</label>
    <type>Phone</type>
</CustomField>