force-app/main/default/objects/Patient_Admission__c/fields/Credible_Need_Interpreter__c.field-meta.xml
<CustomField>
    <fullName>Credible_Need_Interpreter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Need Interpreter?</label>
    <type>Checkbox</type>
</CustomField>