force-app/main/default/objects/Patient_Admission__c/fields/Credible_Patient_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Credible_Patient_First_Name__c</fullName>
    <label>Patient First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>