force-app/main/default/objects/Patient_Admission__c/fields/Credible_Peer_Type__c.field-meta.xml
<CustomField>
    <fullName>Credible_Peer_Type__c</fullName>
    <label>Peer Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>