force-app/main/default/objects/Patient_Admission__c/fields/Credible_Preferred_Language__c.field-meta.xml
<CustomField>
    <fullName>Credible_Preferred_Language__c</fullName>
    <label>Preferred Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>