force-app/main/default/objects/Patient_Admission__c/fields/Credible_Primary_Written_Language__c.field-meta.xml
<CustomField>
    <fullName>Credible_Primary_Written_Language__c</fullName>
    <label>Primary Written Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>