force-app/main/default/objects/Patient_Admission__c/fields/Credible_Smoking_Status__c.field-meta.xml
<CustomField>
    <fullName>Credible_Smoking_Status__c</fullName>
    <label>Smoking Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>