force-app/main/default/objects/Patient_Admission__c/fields/Credible_State__c.field-meta.xml
<CustomField>
    <fullName>Credible_State__c</fullName>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>