force-app/main/default/objects/Patient_Admission__c/fields/Credible_Type_of_srvc_F2F__c.field-meta.xml
<CustomField>
    <fullName>Credible_Type_of_srvc_F2F__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Type of srvc (F2F)</label>
    <type>Checkbox</type>
</CustomField>