force-app/main/default/objects/Patient_Admission__c/fields/Credible_Type_of_srvc_Telephone__c.field-meta.xml
<CustomField>
    <fullName>Credible_Type_of_srvc_Telephone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Type of srvc (Telephone)</label>
    <type>Checkbox</type>
</CustomField>