force-app/main/default/objects/Patient_Admission__c/fields/Credible_Zip__c.field-meta.xml
<CustomField>
    <fullName>Credible_Zip__c</fullName>
    <label>Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>