force-app/main/default/objects/Patient_Admission__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Patient Admissions</relationshipLabel>
    <relationshipName>Patient_Admissions</relationshipName>
    <type>Lookup</type>
</CustomField>