force-app/main/default/objects/Patient_Admission__c/fields/Referral__c.field-meta.xml
<CustomField>
    <fullName>Referral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Patient Admissions</relationshipLabel>
    <relationshipName>Patient_Admissions</relationshipName>
    <type>Lookup</type>
</CustomField>