force-app/main/default/objects/Patient_Admission__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source</label>
    <referenceTo>Source__c</referenceTo>
    <relationshipLabel>Patient Admissions</relationshipLabel>
    <relationshipName>Patient_Admissions</relationshipName>
    <type>Lookup</type>
</CustomField>